# gramps-image-text-reports

./: Makefile  README.md  pyproject.toml
imagetextreport/: __init__.py  _reportmedia.py  _reportmediawriter.py  base.py  baseoptions.py  detancestralreporti.py  detdescendantreporti.py  imagetextreports.gpr.py  reportmedia.py  reportmediawriter.py
imagetextreport/locale/ca/LC_MESSAGES/: addon.mo
imagetextreport/locale/cs/LC_MESSAGES/: addon.mo
imagetextreport/locale/da/LC_MESSAGES/: addon.mo
imagetextreport/locale/de/LC_MESSAGES/: addon.mo
imagetextreport/locale/fi/LC_MESSAGES/: addon.mo
imagetextreport/locale/fr/LC_MESSAGES/: addon.mo
imagetextreport/locale/he/LC_MESSAGES/: addon.mo
imagetextreport/locale/hr/LC_MESSAGES/: addon.mo
imagetextreport/locale/hu/LC_MESSAGES/: addon.mo
imagetextreport/locale/it/LC_MESSAGES/: addon.mo
imagetextreport/locale/ja/LC_MESSAGES/: addon.mo
imagetextreport/locale/lt/LC_MESSAGES/: addon.mo
imagetextreport/locale/nb/LC_MESSAGES/: addon.mo
imagetextreport/locale/nl/LC_MESSAGES/: addon.mo
imagetextreport/locale/pl/LC_MESSAGES/: addon.mo
imagetextreport/locale/pt_PT/LC_MESSAGES/: addon.mo
imagetextreport/locale/ru/LC_MESSAGES/: addon.mo
imagetextreport/locale/sk/LC_MESSAGES/: addon.mo
imagetextreport/locale/sv/LC_MESSAGES/: addon.mo
imagetextreport/locale/uk/LC_MESSAGES/: addon.mo
